--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,28 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+      
+  static_analysis:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.x
+        
+    - name: Go Vet
+      run: |
+        go vet ./...
+    
+    - name: Gofmt
+      run: |
+        diff -u <(echo -n) <(gofmt -d -s **/*.go)
+        
+        
+    - name: Staticcheck
+      run: |
+        go install honnef.co/go/tools/cmd/staticcheck@latest
+        staticcheck $(ls -d ./*/)
+      
