--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,19 +10,28 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        go: ['1.18', '1.x']
+        
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: ${{ matrix.go }}
+      id: go
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
+      
+    - name: Test Race
+      run:  go test -race -v ./...
       
   static_analysis:
     runs-on: ubuntu-latest
@@ -41,8 +50,7 @@ jobs:
     - name: Gofmt
       run: |
         diff -u <(echo -n) <(gofmt -d -s **/*.go)
-        
-        
+             
     - name: Staticcheck
       run: |
         go install honnef.co/go/tools/cmd/staticcheck@latest
