--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,4 +30,6 @@ jobs:
       run: make test
       
     - name: Integration Tests
-      run: make integration_test
+      run: |
+        go install golang.org/x/tools/cmd/goimports@latest
+        make integration_test
