Run ygnmi tests on generated instead of hand-crafted structs (#19)
* generate list too
* check in generated code
* feedback

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,13 +1,18 @@
 run:
-  timeout: 1m
+  timeout: 5m
   skip-dirs:
     - pathgen/testdata
+    - exampleoc
 
 linters:
   enable:
     - gofmt
     - revive
     - goimports
+
+linters-settings:
+  revive:
+    confidence: 0.8
 
 issues:
   exclude:
