--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,16 +29,8 @@ jobs:
     - name: Test
       run: make test
 
-  generation:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: '1.x'
-      id: go
-    - name: Generate
-      run: go generate ./...
-    - name: Check diff
-      run: git diff --exit-code
+    - name: Generate and Check Diff
+      run: |
+        go install golang.org/x/tools/cmd/goimports@latest
+        go generate ./...
+        git diff --exit-code
