--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,8 +29,17 @@ jobs:
     - name: Test
       run: make test
 
+  generate:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.x'
+
     - name: Generate and Check Diff
       run: |
-        go install golang.org/x/tools/cmd/goimports@latest
         go generate ./...
         git diff --exit-code
