--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,4 +42,4 @@ jobs:
     - name: Generate and Check Diff
       run: |
         go generate ./...
-        git diff --exit-code
+        git diff --exit-code --ignore-space-change
