--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,6 +40,7 @@ jobs:
         go-version: '1.x'
 
     - name: Generate and Check Diff
+      # Ignore whitespace because goimports seems to modifying the generated commands inconsistently.
       run: |
         go generate ./...
-        git diff --exit-code --ignore-space-change
+        git diff --exit-code --ignore-all-space --ignore-blank-lines 
