--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,11 @@ jobs:
     - name: Test
       run: make test
 
+    - name: Send coverage
+      uses: shogo82148/actions-goveralls@v1
+      with:
+        path-to-profile: profile.cov
+
   generate:
     runs-on: ubuntu-latest
     steps:
