--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,6 +43,8 @@ jobs:
       uses: shogo82148/actions-goveralls@v1
       with:
         path-to-profile: profile.cov
+      env:
+        COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   generate:
     runs-on: ubuntu-latest
