--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,15 +36,15 @@ jobs:
       with:
         go-version: '1.x'
 
-    - name: Test
-      run: make test
+    - name: Run coverage
+      run: |
+        go install github.com/go-playground/overalls@latest
+        overalls -project ${GITHUB_WORKSPACE} -covermode=count 
 
     - name: Send coverage
       uses: shogo82148/actions-goveralls@v1
       with:
-        path-to-profile: profile.cov
-      env:
-        COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        path-to-profile: overalls.coverprofile
 
   generate:
     runs-on: ubuntu-latest
