--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,8 +26,23 @@ jobs:
     - name: Build
       run: make build
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.x'
+
     - name: Test
       run: make test
+
+    - name: Send coverage
+      uses: shogo82148/actions-goveralls@v1
+      with:
+        path-to-profile: profile.cov
 
   generate:
     runs-on: ubuntu-latest
