--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,42 +6,8 @@ on:
   pull_request:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        go: ['1.18', '1.x']
-        
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: ${{ matrix.go }}
-      id: go
-
-    - name: Build
-      run: make build
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: '1.x'
-
-    - name: Test
-      run: make test
-
-    - name: Send coverage
-      uses: shogo82148/actions-goveralls@v1
-      with:
-        path-to-profile: profile.cov
+  go:
+    uses: openconfig/common-ci/.github/workflows/basic_go.yml@0dea8d1
 
   generate:
     runs-on: ubuntu-latest
