--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   Go:
-    uses: openconfig/common-ci/.github/workflows/basic_go.yaml@0ef57c0b791d1097550176ae6bdf6829bf805643
+    uses: openconfig/common-ci/.github/workflows/basic_go.yaml@06efad828196a069822048a39a125410086c6d13
+    with:
+      static-analysis-excludes-regex: exampleoc
 
   generate:
     runs-on: ubuntu-latest
