--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,9 +7,10 @@ on:
 
 jobs:
   Go:
-    uses: openconfig/common-ci/.github/workflows/basic_go.yaml@dbfbea20ede9f45830f57eaf09a3e561ef17e6ab
+    uses: openconfig/common-ci/.github/workflows/basic_go.yaml@4bb3b86b93564b2fa20bfebd5c62d4df9aee2158
     with:
       static-analysis-excludes-regex: exampleoc
+      gofmt-excludes-regex: exampleoc|internal$
 
   generate:
     runs-on: ubuntu-latest
