--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,8 +6,8 @@ on:
   pull_request:
 
 jobs:
-  Go:
-    uses: openconfig/common-ci/.github/workflows/basic_go.yaml@142ef47ca12d6a5da8e77cc0ef4dff9ffcd0a781
+  common:
+    uses: openconfig/common-ci/.github/workflows/basic_go.yml@142ef47ca12d6a5da8e77cc0ef4dff9ffcd0a781
     with:
       static-analysis-excludes-regex: exampleoc
       skip-gofmt: true
