--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,11 +7,14 @@ on:
 
 jobs:
   go:
-    uses: openconfig/common-ci/.github/workflows/basic_go.yml@8293f7576627e156df8189b5ea4945ead6da9b0d
+    uses: openconfig/common-ci/.github/workflows/go.yml@a0a686b0792f164c0cf587825fd742223abe9dc1
     with:
       static-analysis-excludes-regex: exampleoc
       skip-gofmt: true
       skip-staticcheck: true
+
+  linter:
+    uses: openconfig/common-ci/.github/workflows/linter.yml@a0a686b0792f164c0cf587825fd742223abe9dc1
 
   generate:
     runs-on: ubuntu-latest
