--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   go:
-    uses: openconfig/common-ci/.github/workflows/basic_go.yml@a541e6321f4ed70740579fec91da6a96732e365d
+    uses: openconfig/common-ci/.github/workflows/basic_go.yml@787b41151fa155a32aa28f40486fa394eac5c8c6
     with:
       static-analysis-excludes-regex: exampleoc
       skip-gofmt: true
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: '1.x'
+        go-version: 'stable'
 
     - name: Generate and Check Diff
       # Ignore whitespace because goimports seems to modifying the generated commands inconsistently.
